--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Playwrite+AU+QLD:wght@100..400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/inde.css">
+    <link rel="stylesheet" href="css/inde.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Hogar</title>
@@ -94,7 +94,7 @@
 
         </div>
     </div>
-    <script src="/js/Horarios.js"></script>
-    <script src="/js/preloader.js"></script>
+    <script src="js/Horarios.js"></script>
+    <script src="js/preloader.js"></script>
 </body>
 </html>
