--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" href="/imagenes/Imagen de WhatsApp 2025-03-31 a las 11.26.46_d45160b6.jpg">
+    <link rel="icon" href="imagenes/Imagen de WhatsApp 2025-03-31 a las 11.26.46_d45160b6.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Playwrite+AU+QLD:wght@100..400&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div id="preloader">
-        <img src="/imagenes/Imagen de WhatsApp 2025-03-31 a las 11.26.46_d45160b6.jpg" alt="Cargando...">
+        <img src="imagenes/Imagen de WhatsApp 2025-03-31 a las 11.26.46_d45160b6.jpg" alt="Cargando...">
     </div>
     <noscript>
   <style>
@@ -37,7 +37,7 @@
 
     <div style="display:none;" id="content">
      <header>
-          <img src="/imagenes/Imagen de WhatsApp 2025-03-31 a las 11.26.46_d45160b6.jpg" alt="">
+          <img src="imagenes/Imagen de WhatsApp 2025-03-31 a las 11.26.46_d45160b6.jpg" alt="">
           <h1><strong>"El Hogar"</strong><sub>El placer por el Sabor</sub></h1>
          <form action="" method="get">
             <label for="El Hogar">
